...
    }

    return (
        <Pressable onPress={handleCardPress}>
            <View style={styles.cardContainer}>

                <Pressable style={styles.saveButton} onPress={handlePress} testID="bookmark">
                    <Animated.View style={{ transform: [{ scale: scaleAnim }] }}>
                        <FontAwesome
                            name={saved ? "bookmark" : "bookmark-o"}
                            size={18}
                            color="white"
                        />
...
