...

export default function List() {
  const { showActionSheetWithOptions } = useActionSheet();

  const [selectedOption, setSelectedOption] = useState("Relevância");

  const options = ["Cancelar", "Alfabeticamente (A-Z)", "Alfabeticamente (Z-A)", "Relevância"];
  const destructiveButtonIndex = 0;
  const cancelButtonIndex = 3;

  const getSortedGenres = () => {
    const sortedGenres = [...initialGenres];

...
          columnWrapperStyle={styles.row}
          showsVerticalScrollIndicator={false}
          style={styles.listContainer}
        />

        <TouchableOpacity onPress={handleOpen} style={styles.sortButton}>
          <Text style={styles.sortButtonText}>Ordenar</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
}

...
