const gamesCategories = [
  {
    data: [
      { genre: 'Ação/RPG' },
      { genre: 'RPG' },
      { genre: 'RPG/Aventura' },
      { genre: 'Ação/RPG' },
      { genre: 'Corrida/Simulação' },
      { genre: 'Corrida Realista' },
      { genre: 'Rali/Simulação' },
      { genre: 'Arcade de Corrida' },
      { genre: 'Plataforma 2D' },
      { genre: 'Survival Horror' },
      { genre: 'Estratégia em Tempo Real' },
      { genre: 'Simulador' },
      { genre: 'Stealth/Infiltração' },
    ]

  },
]

export default gamesCategories